--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 
     <header>
         <h1>Anzen Data Yuso</h1>
-        <span class="material-icons" onclick="logout()" style="cursor:pointer;">logout</span>
+        <button onclick="logout()" style="background: transparent; border: 1px solid white; color: white; padding: 5px 10px; border-radius: 5px; cursor: pointer; font-size: 14px;">
+            ログアウト
+        </button>
     </header>
 
     <div id="chat-container">
