--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
 
     <header>
-        <h1>Anzen Data Yuso</h1>
+        <h1>anzen datA YUSO</h1>
         <button onclick="logout()" style="background: transparent; border: 1px solid white; color: white; padding: 5px 10px; border-radius: 5px; cursor: pointer; font-size: 14px;">
             ログアウト
         </button>
