--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
 
     <div id="loading-screen">
         <div class="loader"></div>
-        <p>データを復号化しています...</p>
-    </div>
+        <p>ロード中...</p> </div>
 
     <div id="auth-modal">
         <div class="modal-content">
