--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             --msg-bg-me: #1e4976;
             
             /* 基本文字色（背景が明るいので黒） */
-            --text-color: #333333;
+            --text-color: #ffffff;
             /* ダークなパーツ内の文字色（白） */
             --dark-text: #ffffff;
             
