--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
         /* アプリのアイコン用スタイル */
         .app-icon {
-            height: 26px;       /* タイトルの文字サイズに合わせて高さを調整 */
-            width: auto;        /* 横幅は自動で比率を維持 */
-            margin-right: 10px; /* タイトル文字との間に少し隙間を空ける */
-            border-radius: 4px; /* アイコンの角を少しだけ丸くする（お好みで） */
+            height: 35px;       /* アイコンを大きく変更 */
+            width: auto;        /* 横幅は自動 */
+            margin-right: 12px; /* 余白も少し広げる */
+            border-radius: 6px; /* 角丸もサイズに合わせて調整 */
             
             /* アイコンの色を白にする（元の画像が黒シルエットの場合） */
             /* filter: invert(1) brightness(100%); */ 
