--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
         /* アプリのアイコン用スタイル */
         .app-icon {
-            height: 35px;       /* アイコンを大きく変更 */
+            height: 42px;       /* 高さをさらに大きく変更 */
             width: auto;        /* 横幅は自動 */
-            margin-right: 12px; /* 余白も少し広げる */
-            border-radius: 6px; /* 角丸もサイズに合わせて調整 */
+            margin-right: 15px; /* 余白も少し広げる */
+            border-radius: 8px; /* 角丸もサイズに合わせて調整 */
             
             /* アイコンの色を白にする（元の画像が黒シルエットの場合） */
             /* filter: invert(1) brightness(100%); */ 
