--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         .app-icon {
             height: 42px;       /* 高さをさらに大きく変更 */
             width: auto;        /* 横幅は自動 */
-            margin-right: 15px; /* 余白も少し広げる */
+            margin-right: 10px; /* 余白 */
             border-radius: 8px; /* 角丸もサイズに合わせて調整 */
             
             /* アイコンの色を白にする（元の画像が黒シルエットの場合） */
