--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
     <div id="auth-modal">
         <div class="modal-content">
             <h2>セキュリティ設定</h2>
-            <p><strong>3つの鍵</strong>を設定してください。<br>これらが一致した端末同士でのみ通信できます。</p>
-            <input type="text" id="user-id" placeholder="1. ユーザーID（部屋の名前）">
+            <p><strong>ユーザーID・ログインパスワード・データ暗号化キー</strong>を設定してください。<br>これらが一致した端末同士でのみ通信できます。</p>
+            <input type="text" id="user-id" placeholder="1. ユーザーID">
             <input type="password" id="password" placeholder="ログインパスワード">
             <input type="password" id="encryption-key" placeholder="データ暗号化キー">
             <button onclick="login()">ログイン / 新規登録して開始</button>
