--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         
         :root {
             /* ★背景：爽やかなブルー */
-            --chat-bg: #85a0e6;
+            /* 元の色（もうちょっと濃い青色）: #85a0e6 */
+            --chat-bg: #c4d4f5;
             
             /* UIパーツ：かっこいいダークブルー */
             --bg-color: #0a192f;
