--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     <div id="access-modal">
         <div class="modal-content" style="border-color: #ff6b6b;">
             <h2 style="color: #ff6b6b;">利用制限</h2>
-            <p>このアプリを使用するには<br>有料記事に記載されたパスワードが必要です。</p>
+            <p>このアプリを使用するには<br>noteに記載されたパスワードが必要です。</p>
             
             <input type="password" id="app-access-pass" placeholder="アプリ利用パスワード" 
                    onkeydown="if(event.key === 'Enter') verifyAppAccess()">
